testsuite/tests/interpreter_errors/zero_division_error/test.out
main.adb

Error: Zero division

print (84 / 0)
       ^^^^^^^

